# CryptoCracker

./: .gitignore  CMakeLists.txt  Dockerfile  FOUND_PASSWORD.txt  LONG_SUFFIX_WARNING.md  Makefile  README.md  READY_TO_USE.md  REAL_CRACKING_STATUS.md  SUCCESS.md  SUFFIX_LENGTHS.md  USAGE.md  crack_parallel.py  crack_python.py  crack_wallet_simple.py  docker-compose-simple.yml  docker-compose.dev.yml  docker-compose.yml  fix_charset  fix_charset.cpp  show_charset.cpp  test_crypto.cu  test_passwords.cpp  test_specific  test_specific.cpp  test_specific.cu  test_specific_simple.cu  test_wallet.py
checkpoints/: session.db-shm  session.db-wal
config/: passwords_instructions.txt
hashcat/: Dockerfile  Makefile  crack.sh  docker-compose.yml  generate_wordlist.py  manage_sessions.sh  run.sh  test-passwords.txt  wallet_to_hash.py
include/: checkpoint.h  gpu_engine.h  types.h  wallet.h
src/: checkpoint.cpp  crypto_utils.cpp  gpu_crypto.cu  gpu_crypto_proper.cu  gpu_engine.cu  main.cpp  wallet.cpp
